@@ -1,3 +1,6 @@
+* Deprecate on_change, on_change_with, selection_change_with and autocomplete
+  field arguments
+* Add fields.depends decorator
 * Add run-tests
 * Validate only modified and dependant fields on model write
 * Improve error messages by showing the failing value
